Created Layout for Battle and Stats Columns
Used CSS Grid to create modular layouts for both the Battle and Stats columns

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,14 +1,12 @@
-$battle-column-width: 60%;
-
 /*
  
-  ######  #### ######## #### ##    ##  ######   
- ##    ##  ##       ##   ##  ###   ## ##    ##  
- ##        ##      ##    ##  ####  ## ##        
-  ######   ##     ##     ##  ## ## ## ##   #### 
-       ##  ##    ##      ##  ##  #### ##    ##  
- ##    ##  ##   ##       ##  ##   ### ##    ##  
-  ######  #### ######## #### ##    ##  ######   
+ ##          ###    ##    ##  #######  ##     ## ######## 
+ ##         ## ##    ##  ##  ##     ## ##     ##    ##    
+ ##        ##   ##    ####   ##     ## ##     ##    ##    
+ ##       ##     ##    ##    ##     ## ##     ##    ##    
+ ##       #########    ##    ##     ## ##     ##    ##    
+ ##       ##     ##    ##    ##     ## ##     ##    ##    
+ ######## ##     ##    ##     #######   #######     ##    
  
 */
 
