--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,23 +1,23 @@
 /*
  
-  ######  #### ######## #### ##    ##  ######   
- ##    ##  ##       ##   ##  ###   ## ##    ##  
- ##        ##      ##    ##  ####  ## ##        
-  ######   ##     ##     ##  ## ## ## ##   #### 
-       ##  ##    ##      ##  ##  #### ##    ##  
- ##    ##  ##   ##       ##  ##   ### ##    ##  
-  ######  #### ######## #### ##    ##  ######   
+ ##          ###    ##    ##  #######  ##     ## ######## 
+ ##         ## ##    ##  ##  ##     ## ##     ##    ##    
+ ##        ##   ##    ####   ##     ## ##     ##    ##    
+ ##       ##     ##    ##    ##     ## ##     ##    ##    
+ ##       #########    ##    ##     ## ##     ##    ##    
+ ##       ##     ##    ##    ##     ## ##     ##    ##    
+ ######## ##     ##    ##     #######   #######     ##    
  
 */
 /*
  
-  ######   #######  ########  ########    ##          ###    ##    ##  #######  ##     ## ######## 
- ##    ## ##     ## ##     ## ##          ##         ## ##    ##  ##  ##     ## ##     ##    ##    
- ##       ##     ## ##     ## ##          ##        ##   ##    ####   ##     ## ##     ##    ##    
- ##       ##     ## ########  ######      ##       ##     ##    ##    ##     ## ##     ##    ##    
- ##       ##     ## ##   ##   ##          ##       #########    ##    ##     ## ##     ##    ##    
- ##    ## ##     ## ##    ##  ##          ##       ##     ##    ##    ##     ## ##     ##    ##    
-  ######   #######  ##     ## ########    ######## ##     ##    ##     #######   #######     ##    
+ ##          ###    ##    ##  #######  ##     ## ######## 
+ ##         ## ##    ##  ##  ##     ## ##     ##    ##    
+ ##        ##   ##    ####   ##     ## ##     ##    ##    
+ ##       ##     ##    ##    ##     ## ##     ##    ##    
+ ##       #########    ##    ##     ## ##     ##    ##    
+ ##       ##     ##    ##    ##     ## ##     ##    ##    
+ ######## ##     ##    ##     #######   #######     ##    
  
 */
 #poke-container {
@@ -29,8 +29,8 @@
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-flow: column wrap;
-          flex-flow: column wrap;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
 }
 
 @media screen and (min-width: 992px) {
@@ -66,16 +66,55 @@
           flex-flow: column wrap;
 }
 
+#battle-column {
+  background-color: cyan;
+  height: 80vh;
+}
+
+@media screen and (min-width: 992px) {
+  #battle-column {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 60%;
+            flex: 0 0 60%;
+    max-width: 60%;
+    height: auto;
+  }
+}
+
+#stats-column {
+  background-color: yellow;
+}
+
+/*
+ 
+  ######  ##     ##    ###    ########    
+ ##    ## ##     ##   ## ##      ##       
+ ##       ##     ##  ##   ##     ##       
+ ##       ######### ##     ##    ##       
+ ##       ##     ## #########    ##       
+ ##    ## ##     ## ##     ##    ##       
+  ######  ##     ## ##     ##    ##       
+ 
+*/
 .chat-row-item {
   margin: 10px;
 }
 
 #chat-messages {
   margin-bottom: 0px;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-box-flex: 0;
+      -ms-flex: none;
+          flex: none;
+  height: 4rem;
   border: 1px black solid;
+}
+
+@media screen and (min-width: 992px) {
+  #chat-messages {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
 }
 
 #chat-send-message {
@@ -101,34 +140,73 @@
           flex: 1;
 }
 
-#battle-column {
-  background-color: cyan;
-  height: 80vh;
+/*
+ 
+ ########     ###    ######## ######## ##       ######## 
+ ##     ##   ## ##      ##       ##    ##       ##       
+ ##     ##  ##   ##     ##       ##    ##       ##       
+ ########  ##     ##    ##       ##    ##       ######   
+ ##     ## #########    ##       ##    ##       ##       
+ ##     ## ##     ##    ##       ##    ##       ##       
+ ########  ##     ##    ##       ##    ######## ######## 
+ 
+*/
+#battle-controller {
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto;
+      grid-template-columns: auto;
+  -ms-grid-rows: 75% 25%;
+      grid-template-rows: 75% 25%;
 }
 
-@media screen and (min-width: 992px) {
-  #battle-column {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 60%;
-            flex: 0 0 60%;
-    max-width: 60%;
-    height: auto;
-  }
+#battle-controller-button-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
 }
 
-#stats-column {
-  background-color: yellow;
+.battle-controller-button {
+  width: 50%;
 }
 
 /*
  
- ########     ###    ######## ######## ##       ########     ######   #######  ##    ## ######## ########   #######  ##       ##       ######## ########  
- ##     ##   ## ##      ##       ##    ##       ##          ##    ## ##     ## ###   ##    ##    ##     ## ##     ## ##       ##       ##       ##     ## 
- ##     ##  ##   ##     ##       ##    ##       ##          ##       ##     ## ####  ##    ##    ##     ## ##     ## ##       ##       ##       ##     ## 
- ########  ##     ##    ##       ##    ##       ######      ##       ##     ## ## ## ##    ##    ########  ##     ## ##       ##       ######   ########  
- ##     ## #########    ##       ##    ##       ##          ##       ##     ## ##  ####    ##    ##   ##   ##     ## ##       ##       ##       ##   ##   
- ##     ## ##     ##    ##       ##    ##       ##          ##    ## ##     ## ##   ###    ##    ##    ##  ##     ## ##       ##       ##       ##    ##  
- ########  ##     ##    ##       ##    ######## ########     ######   #######  ##    ##    ##    ##     ##  #######  ######## ######## ######## ##     ## 
+  ######  ########    ###    ########  ######  
+ ##    ##    ##      ## ##      ##    ##    ## 
+ ##          ##     ##   ##     ##    ##       
+  ######     ##    ##     ##    ##     ######  
+       ##    ##    #########    ##          ## 
+ ##    ##    ##    ##     ##    ##    ##    ## 
+  ######     ##    ##     ##    ##     ######  
  
 */
+#stats-column {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto;
+      grid-template-columns: auto;
+  -ms-grid-rows: 50% 50%;
+      grid-template-rows: 50% 50%;
+}
+
+/*
+ 
+ #### ##    ## ########  ##     ## ######## 
+  ##  ###   ## ##     ## ##     ##    ##    
+  ##  ####  ## ##     ## ##     ##    ##    
+  ##  ## ## ## ########  ##     ##    ##    
+  ##  ##  #### ##        ##     ##    ##    
+  ##  ##   ### ##        ##     ##    ##    
+ #### ##    ## ##         #######     ##    
+ 
+*/
+button {
+  border: black 1px solid;
+}
 /*# sourceMappingURL=styles.css.map */
