--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,5 +1,9 @@
 @import "_variables";
 
+table {
+  border: 1px black solid;
+}
+
 /*
  
  ##          ###    ##    ##  #######  ##     ## ######## 
@@ -13,7 +17,7 @@
 */
 #poke-container {
   background-color: grey;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
@@ -33,26 +37,6 @@
   }
 }
 
-#chat-column {
-  background-color: red;
-  flex-flow: column wrap;
-}
-
-#battle-column {
-  background-color: cyan;
-  height: 80vh;
-
-  @media screen and (min-width: $desktop-min-width) {
-    flex: 0 0 $battle-column-width;
-    max-width: $battle-column-width;
-    height: auto;
-  }
-}
-
-#stats-column {
-  background-color: yellow;
-}
-
 /*
  
   ######  ##     ##    ###    ########    
@@ -64,6 +48,11 @@
   ######  ##     ## ##     ##    ##       
  
 */
+#chat-column {
+  background-color: red;
+  flex-flow: column wrap;
+}
+
 .chat-row-item {
   margin: 10px;
 }
@@ -103,6 +92,17 @@
  ########  ##     ##    ##       ##    ######## ######## 
  
 */
+#battle-column {
+  background-color: cyan;
+  height: 80vh;
+
+  @media screen and (min-width: $desktop-min-width) {
+    flex: 0 0 $battle-column-width;
+    max-width: $battle-column-width;
+    height: auto;
+  }
+}
+
 #battle-controller {
   width: 100%;
   display: grid;
@@ -137,6 +137,21 @@
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: 50% 50%;
+  background-color: yellow;
+}
+
+.stats-table {
+  height: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
+.stats-row {
+  margin: 15px;
+  display: flex;
+  justify-content: space-evenly;
+  width: 120px;
 }
 
 /*
