Created Battle Scence Layout

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -11,6 +11,7 @@
 */
 
 $desktop-min-width: 992px;
+$tablet-min-width: 700px;
 
 $battle-column-width: 60%;
 $column-width: (100% - $battle-column-width) / 2;
