--- a/styles/styles.css
+++ b/styles/styles.css
@@ -161,6 +161,78 @@ table {
       grid-template-rows: 75% 25%;
 }
 
+#battle-scence {
+  background-image: url("/assets/img/grass-bg.png");
+  background-size: cover;
+}
+
+#battle-scence-wrapper {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+}
+
+.battle-scence-column {
+  width: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+.battle-scence-column-players {
+  -webkit-box-flex: 5;
+      -ms-flex: 5;
+          flex: 5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.battle-health-bar {
+  -webkit-box-flex: 3;
+      -ms-flex: 3 1 auto;
+          flex: 3 1 auto;
+}
+
+.battle-monster {
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+}
+
+.battle-monster-wrapper {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+}
+
+.battle-monster-sprite {
+  width: 100px;
+}
+
+@media screen and (min-width: 700px) {
+  .battle-monster-sprite {
+    width: 200px;
+  }
+}
+
 #battle-controller-button-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -197,7 +269,7 @@ table {
 }
 
 .stats-table {
-  height: 100%;
+  height: 70%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
