Created Basic Button Design and Updated DesignDoc

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -15,3 +15,17 @@ $tablet-min-width: 700px;
 
 $battle-column-width: 60%;
 $column-width: (100% - $battle-column-width) / 2;
+
+/*
+ 
+ ########     ###    ######## ######## ##       ######## 
+ ##     ##   ## ##      ##       ##    ##       ##       
+ ##     ##  ##   ##     ##       ##    ##       ##       
+ ########  ##     ##    ##       ##    ##       ######   
+ ##     ## #########    ##       ##    ##       ##       
+ ##     ## ##     ##    ##       ##    ##       ##       
+ ########  ##     ##    ##       ##    ######## ######## 
+ 
+*/
+
+$button-corner-angle: 15px;
