--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,17 @@
  ######## ##     ##    ##     #######   #######     ##    
  
 */
+/*
+ 
+ ########     ###    ######## ######## ##       ######## 
+ ##     ##   ## ##      ##       ##    ##       ##       
+ ##     ##  ##   ##     ##       ##    ##       ##       
+ ########  ##     ##    ##       ##    ##       ######   
+ ##     ## #########    ##       ##    ##       ##       
+ ##     ## ##     ##    ##       ##    ##       ##       
+ ########  ##     ##    ##       ##    ######## ######## 
+ 
+*/
 table {
   border: 1px black solid;
 }
@@ -157,8 +168,8 @@ table {
   display: grid;
   -ms-grid-columns: auto;
       grid-template-columns: auto;
-  -ms-grid-rows: 75% 25%;
-      grid-template-rows: 75% 25%;
+  -ms-grid-rows: 70% 30%;
+      grid-template-rows: 70% 30%;
 }
 
 #battle-scence {
@@ -244,7 +255,13 @@ table {
 }
 
 .battle-controller-button {
-  width: 50%;
+  width: 49%;
+  margin: 0.5%;
+  background: #e2e2e2;
+  background: -webkit-gradient(linear, left bottom, left top, from(#e2e2e2), color-stop(43%, #e2e2e2), color-stop(43%, #eee), color-stop(57%, #eee), color-stop(57%, #fff));
+  background: linear-gradient(0deg, #e2e2e2 0%, #e2e2e2 43%, #eee 43%, #eee 57%, #fff 57%);
+  -webkit-clip-path: polygon(15px 0, calc(100% - 15px) 0, 100% 15px, 100% calc(100% - 15px), calc(100% - 15px) 100%, 15px 100%, 0 calc(100% - 15px), 0 15px);
+          clip-path: polygon(15px 0, calc(100% - 15px) 0, 100% 15px, 100% calc(100% - 15px), calc(100% - 15px) 100%, 15px 100%, 0 calc(100% - 15px), 0 15px);
 }
 
 /*
