Added Cross-Platform PKMN Font Files

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -18,6 +18,26 @@ $column-width: (100% - $battle-column-width) / 2;
 
 /*
  
+ ######## ##    ## ########   #######   ######   ########     ###    ########  ##     ## ##    ## 
+    ##     ##  ##  ##     ## ##     ## ##    ##  ##     ##   ## ##   ##     ## ##     ##  ##  ##  
+    ##      ####   ##     ## ##     ## ##        ##     ##  ##   ##  ##     ## ##     ##   ####   
+    ##       ##    ########  ##     ## ##   #### ########  ##     ## ########  #########    ##    
+    ##       ##    ##        ##     ## ##    ##  ##   ##   ######### ##        ##     ##    ##    
+    ##       ##    ##        ##     ## ##    ##  ##    ##  ##     ## ##        ##     ##    ##    
+    ##       ##    ##         #######   ######   ##     ## ##     ## ##        ##     ##    ##    
+ 
+*/
+@font-face {
+    font-family: 'pkmn_rbygsc';
+    src: url('/assets/fonts/PKMN\ RBYGSC/pkmn_rbygsc-webfont.woff2') format('woff2'),
+    url('/assets/fonts/PKMN\ RBYGSC/pkmn_rbygsc-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+/*
+ 
  ########     ###    ######## ######## ##       ######## 
  ##     ##   ## ##      ##       ##    ##       ##       
  ##     ##  ##   ##     ##       ##    ##       ##       
