Added new temp background

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -133,7 +133,7 @@ body {
 }
 
 #battle-scence {
-    background-image: url("/assets/img/grass-bg.png");
+    background-image: url("/assets/img/DP_grass.png");
     background-size: cover;
 }
 
